# yanic

./: .gitignore  Makefile  README.md  Taskfile.dist.yml  host.sh  pyproject.toml  yanic.kdl
docker/: Dockerfile  container.sh
tests/: responsible.py  test_yanic.py
yanic/: server.py  ytdl.py
