[tool.poetry]
authors = ["Listenbox <hello@listenbox.app>"]
description = "async yt-dlp server"
name = "yanic"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.10"

blacksheep = "^2.0.7"
uvicorn = "^0.30.0"
yt-dlp = {version = "^2024.8.1", allow-prereleases = false}
# because uvicorn:    https://github.com/encode/uvicorn/blob/master/uvicorn/_types.py
# because blacksheep: https://github.com/Neoteroi/BlackSheep/blob/main/blacksheep/asgi.pyi
typing-extensions = "^4.11.0"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.8.1"
openapi-core = "^0.19.2"
pytest = "^8.0.0"
pytest-asyncio-cooperative = "^0.37.0"

[tool.poetry.group.build.dependencies]
shiv = "^1.0.5"

[tool.poetry.scripts]
server = "yanic.server:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
